<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/White"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linlayout_titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@color/Black"
        android:padding="10dp" >

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="center"
            android:text="@string/main_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/Lime_Green" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtTargetName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/linlayout_titlebar"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/txt_target_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Black" />

    <EditText
        android:id="@+id/edtxt_target_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/txtTargetName"
        android:layout_marginTop="10dp"
        android:hint="@string/hint_tag" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btn_popup_OK"
        android:layout_width="90dp"
        android:layout_height="60dp"
        android:layout_alignBaseline="@+id/btn_popup_cancel"
        android:layout_alignBottom="@+id/btn_popup_cancel"
        android:layout_alignRight="@+id/edtxt_target_name"
        android:background="@color/Dark_Charcoal"
        android:minWidth="90dp"
        android:padding="10dp"
        android:text="@string/ok"
        android:textColor="@color/White" />

    <Button
        android:id="@+id/btn_popup_cancel"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/edtxt_target_name"
        android:layout_below="@+id/edtxt_target_name"
        android:layout_marginTop="10dp"
        android:background="@color/Dark_Charcoal"
        android:minWidth="90dp"
        android:padding="10dp"
        android:text="@string/cancel"
        android:textColor="@color/White" />

</RelativeLayout>